--- a/AttendanceWeb/src/app/app.component.html
+++ b/AttendanceWeb/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<!-- <div>
   <tr>
     <td class="logoStyle">
       <img width="100" alt="App Logo" src="./../assets/images/logo.png">
@@ -9,5 +9,9 @@
     </td>
   </tr>
   
-</div>
+</div> -->
+<app-header></app-header>
+
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
